# Zedin-Arama-Motoru

./: .gitignore  Nixpacks.toml  Procfile  README.md  akilli_domain_filtre.py  arama_indeksi.json  arayuz.py  common_crawl_avcisi.py  domain_avcisi.py  domain_harf_bolucu.py  domain_tarayici.py  domainler.txt  domainler_temiz.txt  dosya_yazici.py  gelişmiş_yz_filtre.py  ham_domainler.txt  indeks_aktarici.py  indeks_olusuturucu.py  indeks_sunucu_baglantisi.py  mega_hizli_filtre.py  nixpacks.toml  optimizasyon.py  otomatik_kavrayici.py  populer_domain_cekici.py  protokol_ekleyici.py  requirements.txt  sablonlar.py  seeder.py  supervisord.conf  tarayici.py  toplu_tarayici.py  turk_siteleri.json  veritabani.py  veritabani_kur.py  veritabani_opt_ve_kucult.py  zedin_mutlak_whitelist_filtre.py  zedin_tavizsiz_filtre.py
harfler/: a.txt  b.txt  c.txt  e.txt  f.txt  i.txt  n.txt  o.txt  p.txt  q.txt  s.txt  t.txt  u.txt  w.txt  x.txt  y.txt  z.txt
harfler/zedin_ai_motor/: Cargo.toml  a_temiz.txt  b_temiz.txt  c_temiz.txt  d.txt  d_temiz.txt  e_temiz.txt  f_temiz.txt  g.txt  g_temiz.txt  h.txt  h_temiz.txt  i_temiz.txt  indeks_0.json  indeks_1.json  indeks_2.json  indeks_3.json  indeks_4.json  indeks_5.json  indeks_6.json  indeks_7.json  indeks_8.json  indeks_9.json  indeks_a.json  indeks_b.json  indeks_c.json  indeks_d.json  indeks_diger.json  indeks_e.json  indeks_f.json  indeks_g.json  indeks_h.json  indeks_i.json  indeks_j.json  (+44 more)
rust_motor/: Cargo.toml  pyproject.toml
rust_motor/src/: lib.rs
static/: zedin_akil.js
zedin-frontend/: custom-zedin.css  package.json
(+8 files in other folders)
