[package]
name = "zedin_domain"
version = "4.0.0"
edition = "2021"

[lib]
name = "zedin_domain"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "gzip", "brotli", "json"], default-features = false }
rayon = "1.10"
scraper = "0.19"
url = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
